<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iStayHealthy</string>
    <string name="chartname">Chartview in Landscape Mode</string>
    <string-array name="repeats">
    	<item>Every 24 hours</item>
    	<item>Every 12 hours</item>
    	<item>Every 8 hours</item>
    	<item>Every 6 hours</item>
    	<item>Never</item>
    </string-array>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="HIVDrugs">HIV Drugs</string>
    <string name="Results">Results</string>
    <string name="NoResultsListed">No Results Listed</string>
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="CD4Count">CD4  Count</string>
    <string name="CD4Percent">CD4 %</string>
    <string name="ViralLoad">Viral Load</string>
    <string name="AddResults">Add Results</string>
    <string name="EditResults">Edit Results</string>
    <string name="AddHIVDrugs">Add HIV Drugs</string>
    <string name="EditHIVDrugs">Edit HIV Drugs</string>
    <string name="AddAlert">Add Alert</string>
    <string name="EditAlert">Edit Alert</string>
    <string name="AddOtherMeds">Add Other Meds</string>
    <string name="EditOtherMeds">Edit Other Meds</string>
    <string name="OtherMeds">Other Medication</string>
    <string name="Alerts">Alerts</string>
    <string name="Charts">Charts</string>
    <string name="CD4">CD4 </string>
    <string name="DefaultAlertLabelt">iStayHealthy</string>
    <string name="DefaultAlertMessage">Take your meds</string>
    <string name="EnterName">Enter Name</string>
    <string name="EnterDose">Enter Dose in [mg]</string>
    <string name="SetDate">Set Date</string>
    <string name="ChangeName">Change Name</string>
    <string name="ChangeDose">Change Dosis</string>
    <string name="undetectable">undetectable</string>
    <string name="notapplicable">n/a</string>
    <string name="SetSound">Set Sound</string>
    <string name="ChangeSound">Change Sound</string>
    <string name="SetRepeats">Set Repeats</string>
    <string name="ChangeRepeats">Change Repeats</string>
    <string name="Sound">Sound</string>
    <string name="Repeats">Repeats</string>
    <string name="SetLabel">Set Label</string>
    <string name="SetMessage">Set Message</string>
    <string name="Default">Default</string>
    <string name="bannerURL">http://www.poz.com</string>
    <string name="undetectablequery">undetectable?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="vibratequery">Vibrate?</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="none">None</string>
    <string name="und">und.</string>
    <string name="Missedquery">Missed your medication?</string>
    <string name="SideEffects">Side Effects</string>
    <string name="MissedMedications">Missed</string>
    <string name="ListOfMeds">List of HIV Medications</string>
    <string name="noneListed">none listed</string>
    <string name="Back">Back</string>
    <string name="Clear">Clear</string>
    <string name="DeleteSideEffects">Delete All Side Effects?</string>
    <string name="DeleteMissedMeds">Delete All Missed Meds?</string>
    <string name="Extras">Extras</string>
    <string name="emailResults">E-mail Results</string>
    <string name="sendFeedback">Comments?</string>
    <string name="perday">Every Day?</string>
    <string name="settime">Set Time</string>
    <string name="recurring">recurring</string>
    <string name="unique">once only</string>
    <string name="lexicon">Glossary</string>
    <string name="Backup">Backup</string>
    <string name="Password">Set Password</string>
    <string name="UsePassword">Use Password?</string>
    <string name="PasswordText">Password</string>
    <string name="Confirm">Confirm</string>
    <string name="IncorrectPassword">Inconsistent password. Re-enter</string>
    <string name="TooShortPassword">Password too short. Re-enter</string>
    <string name="Restore">Restore</string>
    <string name="ConnectDropbox">Connect to Dropbox</string>
    <string name="DisconnectDropbox">Disconnect from Dropbox</string>
    <string name="Dropbox">Dropbox</string>
    <string name="ConnectTintabee">Connect to Tintabee</string>
    <string name="DisconnectTintabee">Disconnect from Tintabee</string>
    <string name="Tintabee">Tintabee</string>
    <string name="upload">Backing up. Please wait.</string>
    <string name="download">Restoring data. Please wait.</string>
    <string name="Android">Backup/Restore</string>
    <string name="AddClinic">Add Clinic</string>
    <string name="ModifyClinic">Clinic</string>
    <string name="ClinicName">Clinic Name</string>
    <string name="ClinicID">Clinic ID</string>
    <string name="ConsultantName">Consultant</string>
    <string name="ClinicWeb">Web-site</string>
    <string name="ClinicEmail">Email</string>
    <string name="ClinicPhone">Phone</string>
    <string name="EmergencyPhone">Emergency</string>
    <string name="CallClinic">Call</string>
    <string name="CallEmergency">Call Emergency</string>
    <string name="Email">Email Clinic</string>
    <string name="GoToWeb">Go to Website</string>
    <string name="AddProcedure">Illness/Surgery</string>
    <string name="ModifyProcedure"> Edit Illness/Surgery</string>
    <string name="Illness">Illness</string>
    <string name="Procedure">Procedure</string>
    <string name="Clinics">Clinics</string>
    <string name="SavePassword">Save Password</string>
    <string name="HepCViralLoad">HepC Viral L.</string>
    <string name="HDL">Cholesterol(HDL)</string>
    <string name="LDL">Cholesterol(LDL)</string>
    <string name="Tri">Cholesterol(tri.)</string>
    <string name="sugar">Blood Sugar</string>
    <string name="pressure">Blood Pressure</string>
    <string name="rate">Heart Rate</string>
    <string name="smoking">Smoker?</string> 
    <string name="diabetic">Diabetic?</string> 
    <string name="More">More</string>
    <string name="weight">Weight</string>
    <string name="login">Login</string>
    <string name="toTinabee">Upload</string>
    <string name="fromTinabee">Download</string>
    <string name="button">ImageButton</string>
    <string name="view">ImageView</string>
    <string name="general">General</string>
    <string name="deleteentry">Delete Entry?</string>
    <string name="passworddisabled">Password disabled</string>
    <string name="passwordenabled">Password enabled</string>
    <string name="onlyonce">Only Once</string>
    <string name="everytwodays">Every 2 days?</string>
    <string name="everythreedays">Every 3 days?</string>
    <string name="wrongPassword">Wrong Password. Try again</string>
    <string name="ChangeDate">Change Date</string>
    <string name="PreviousMeds">Previous Medications</string>
    <string name="TreatmentStart">Treatment Start</string>
    <string name="TreatmentEnd">Treatment End</string>
    <string name="Serious">Serious</string>
    <string name="Major">Major</string>
    <string name="Minor">Minor</string>
    <string name="Select">Select</string>
    <string name="systole">Systole</string>
    <string name="diastole">Diastole</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="cholesterolRatio">Cholesterol Ratio</string>
    <string name="cardiacRisk">Cardiac Risk</string>
    <string name="haemo">Haemoglobulin</string>
    <string name="platelet">Platelets</string>
    <string name="whitecells">White Cell Count</string>
    <string name="redcells">Red Cell Count</string>
    <string name="medicationtracker">Medication Tracker</string>
    <string name="confirmmeds">Confirm I took my meds?</string>
    <string name="tookmeds">I took my meds</string>
    <string name="forgotmeds">I did not take my meds</string>
    <string name="showresult">Show Results</string>
    <string name="HIVResults">HIV</string>
    <string name="BloodResults">Bloods</string>
    <string name="OtherResults">Other</string>
    <string name="AllResults">All</string>
    <string name="version">iStayHealthy v3.0.4</string>
    <string name="forgotPassword">Forgot Password? Click here</string>
    <string name="editSideEffect">Describe Side Effect</string>
    <string name="effectList">From List</string>
    <string name="info">Info</string>
    <string name="loading">Loading...</string>
</resources>
