<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="6dip">
    <include layout="@layout/edittitlebar"/>
    <RadioGroup 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/resultsGroup">
        <RadioButton 
            android:id="@+id/HIVButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/HIVResults"
            android:textColor="@color/darkblue"
            android:textStyle="bold"
				android:maxLines="2" 
				android:ellipsize="marquee" 
				android:singleLine="false" 
            android:textSize="12sp"/>
        <RadioButton 
            android:id="@+id/BloodButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/BloodResults"
            android:textColor="@color/darkred"
				android:maxLines="2" 
				android:ellipsize="marquee" 
				android:singleLine="false" 
            android:textStyle="bold"
            android:textSize="12sp"/>
        <RadioButton 
            android:id="@+id/OtherButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/OtherResults"
            android:textColor="@color/darkgreen"
				android:maxLines="2" 
				android:ellipsize="marquee" 
				android:singleLine="false" 
            android:textStyle="bold"
            android:textSize="12sp"/>       
    </RadioGroup>
    <include layout="@layout/setdate"/>
    <ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		   
    	<TableLayout 
    		android:id="@+id/changeResultsTableLayout"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:stretchColumns="1">
    	    
    	    	    
    		<TableRow 
    		    android:id="@+id/CD4Row"
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15sp"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/CD4Count"/>
    			<EditText 
    				android:id="@+id/EditCD4Count"
		        	android:layout_span="2"
    				android:inputType="numberDecimal"
    				android:digits="0123456789"
    				android:maxLength="4"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15sp"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    		</TableRow>
    		<TableRow 
    		    android:id="@+id/CD4PercentRow"
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15sp"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/CD4Percent"/>
    			<EditText 
    				android:id="@+id/EditCD4Percent"
		        	android:layout_span="2"
    				android:inputType="numberDecimal"
    				android:digits="0123456789."
    				android:maxLength="4"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15sp"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    		</TableRow>
    		<TableRow 
    		    android:id="@+id/ViralLoadRow"
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15sp"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/ViralLoad"/>
    			<EditText 
    				android:id="@+id/HIVViralLoad"
		        	android:layout_span="2"
    				android:inputType="numberDecimal"
    				android:digits="0123456789"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15sp"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    		</TableRow>
    		<TableRow 
    		    android:id="@+id/UndetectableVLRow"
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15sp"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/undetectablequery"/>
	    	   	<CheckBox 
	    	   	    android:id="@+id/isUndetectableCheckButton"
		        	android:layout_span="2"
	    	   	    android:layout_width="wrap_content"
	    	   	    android:layout_height="wrap_content"
			      	android:layout_marginTop="2dip"
			      	android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"/>
    		</TableRow>    				
    									
    		<TableRow 
    		    android:id="@+id/BloodSugarRow"
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15sp"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/sugar"/>
    			<EditText 
    				android:id="@+id/BloodSugar"
		        	android:layout_span="2"
    				android:inputType="numberDecimal"
    				android:digits="0123456789."
    				android:maxLength="6"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15sp"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    		</TableRow>
    		<TableRow 
    		    android:id="@+id/CholesterolRow"
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15sp"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/cholesterol"/>
    			<EditText 
    				android:id="@+id/Cholesterol"
		        	android:layout_span="2"
    				android:inputType="numberDecimal"
    				android:digits="0123456789."
    				android:maxLength="6"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15sp"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    		</TableRow>

    		<TableRow 
    		    android:id="@+id/HDLRow"
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15sp"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/HDL"/>
    			<EditText 
    				android:id="@+id/HDL"
		        	android:layout_span="2"
    				android:inputType="numberDecimal"
    				android:digits="0123456789."
    				android:maxLength="6"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15sp"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    		</TableRow>
    				
    							
    		<TableRow 
    		    android:id="@+id/LDLRow"
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15sp"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/LDL"/>
    			<EditText 
    				android:id="@+id/LDL"
		        	android:layout_span="2"
    				android:inputType="numberDecimal"
    				android:digits="0123456789."
    				android:maxLength="6"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15sp"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    		</TableRow> 
    		
    		
    		<TableRow 
    		    android:id="@+id/HepCRow"
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15sp"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/HepCViralLoad"/>
    			<EditText 
    				android:id="@+id/HepCViralLoad"
		        	android:layout_span="2"
    				android:inputType="numberDecimal"
    				android:digits="0123456789"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15sp"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    		</TableRow>
    		<TableRow 
    		    android:id="@+id/HepCCheckRow"
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15sp"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/undetectablequery"/>
	    	   	<CheckBox 
	    	   	    android:id="@+id/isHepCUndetectableCheckButton"
		        	android:layout_span="2"
	    	   	    android:layout_width="wrap_content"
	    	   	    android:layout_height="wrap_content"
			      	android:layout_marginTop="2dip"
			      	android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"/>            
    		</TableRow>
    				
    						   		
    		<TableRow 
    		    android:id="@+id/BloodPressureRow"
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15sp"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/pressure"/>
    			<EditText 
    				android:id="@+id/Systole"
    				android:inputType="numberDecimal"
    				android:digits="0123456789"
    				android:maxLength="3"
    				android:text="0"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15sp"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    			<EditText 
    				android:id="@+id/Diastole"
    				android:inputType="numberDecimal"
    				android:digits="0123456789"
    				android:maxLength="3"
    				android:text="0"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15sp"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    			</TableRow>

    		<TableRow 
    		    android:id="@+id/CardiacRiskRow"
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15sp"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/cardiacRisk"/>
    			<EditText 
    				android:id="@+id/CardiacRisk"
		        	android:layout_span="2"
    				android:inputType="numberDecimal"
    				android:digits="0123456789."
    				android:maxLength="6"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15sp"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    		</TableRow>
    							
    		
    		<TableRow 
    		    android:id="@+id/HeartRateRow"
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15sp"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/rate"/>
    			<EditText 
    				android:id="@+id/HeartRate"
		        	android:layout_span="2"
    				android:inputType="numberDecimal"
    				android:digits="0123456789"
    				android:maxLength="3"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15sp"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    		</TableRow>
    		
    		
    		<TableRow 
    		    android:id="@+id/WeightRow"
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15sp"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/weight"/>
    			<EditText 
    				android:id="@+id/Weight"
		        	android:layout_span="2"
    				android:inputType="numberDecimal"
    				android:digits="0123456789."
    				android:maxLength="6"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15sp"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    		</TableRow>
    				
    		
    												
    	</TableLayout>
    	</ScrollView>
</LinearLayout>
