<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="6dip">
    <include layout="@layout/edittitlebar"/>
    	<TableLayout 
    		android:id="@+id/addClinicsTableLayout"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:stretchColumns="1">
    	
    	    	        	    
    		<TableRow 
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15dip"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/ClinicName"/>
    			<EditText 
    				android:id="@+id/EditClinic"
    				android:inputType="text"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15dip"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    		</TableRow>
    		<TableRow 
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15dip"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/ClinicID"/>
    			<EditText 
    				android:id="@+id/EditClinicID"
    				android:inputType="text"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15dip"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    		</TableRow>
    		<TableRow 
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15dip"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/ConsultantName"/>
    			<EditText 
    				android:id="@+id/EditConsultantName"
    				android:inputType="text"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15dip"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>
    		</TableRow>
    		<TableRow 
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15dip"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/ClinicPhone"/>
    			<EditText 
    				android:id="@+id/EditClinicPhone"
    				android:inputType="phone"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15dip"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>    						
    		</TableRow>
    		    				
    		<TableRow 
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15dip"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/ClinicEmail"/>
    			<EditText 
    				android:id="@+id/EditClinicEmail"
    				android:inputType="textEmailAddress"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15dip"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>    						
    		</TableRow>

    		<TableRow 
    		 	android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginLeft="6dip"            
		    		android:textSize="15dip"
		    		android:textStyle="bold"		    		
		    		android:textColor="@color/textcolour"
		    		android:text="@string/ClinicWeb"/>
    			<EditText 
    				android:id="@+id/EditClinicWeb"
    				android:inputType="textUri"
					android:layout_marginLeft="6dip"            
			        android:layout_marginTop="2dip"
			        android:layout_marginBottom="1dip"
					android:layout_marginRight="6dip"            
		    		android:textSize="15dip"
		    		android:layout_width="wrap_content"    
		    		android:layout_height="wrap_content"/>    						
    		</TableRow>
    								
    	</TableLayout>
</LinearLayout>
